[gd_scene load_steps=14 format=2]

[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-7.png" type="Texture" id=1]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-6.png" type="Texture" id=2]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-8.png" type="Texture" id=3]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-5.png" type="Texture" id=4]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-1.png" type="Texture" id=5]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-2.png" type="Texture" id=6]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-3.png" type="Texture" id=7]
[ext_resource path="res://Flappy Fat Bird Sprite Sheets/PNG/frame-4.png" type="Texture" id=8]
[ext_resource path="res://Bird.gd" type="Script" id=9]
[ext_resource path="res://audio/bonk.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/powerup.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 23.746

[node name="Bird" type="RigidBody2D"]
position = Vector2( 974, 470 )
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 9 )
flap_strength = 500

[node name="PowerupEffect" type="ColorRect" parent="."]
visible = false
margin_left = -26.5
margin_top = -30.0
margin_right = 33.5
margin_bottom = 30.0
rect_pivot_offset = Vector2( 30, 30 )
color = Color( 1, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.254, 0 )
shape = SubResource( 2 )

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BonkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 10.0
pitch_scale = 0.6
bus = "Effects"

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="body_entered" from="." to="." method="_on_Bird_body_entered"]
[connection signal="timeout" from="PowerupTimer" to="." method="deactivate_powerup"]
